# ocho

./: .gitignore  CMakeLists.txt  README.md  input.txt  output.txt
include/: CRC32.hpp
src/: CRC32.cpp  IO.cpp  main.cpp
